sort.basic.cocktail.AlgCocktailSort1.scala.error
Compilation error:
AlgCocktailSort1:14: error: not found: value j
          plusPetit(j+1,j)
                    ^AlgCocktailSort1:14: error: not found: value j
          plusPetit(j+1,j)
                        ^AlgCocktailSort1:15: error: not found: value j
          plusPetit(j+1,j)
                    ^AlgCocktailSort1:15: error: not found: value j
          plusPetit(j+1,j)
                        ^